RESOLVED FIXED184174
IsoHeapImpl not IsoHeapImplBase should add itself to AllIsoHeaps
https://bugs.webkit.org/show_bug.cgi?id=184174
Summary IsoHeapImpl not IsoHeapImplBase should add itself to AllIsoHeaps
Saam Barati
Reported 2018-03-29 22:23:22 PDT
Otherwise, another thread may see a partially formed IsoHeapImpl...
Attachments
patch (1.88 KB, patch)
2018-04-04 12:42 PDT, Saam Barati
fpizlo: review+
patch for landing (2.25 KB, patch)
2018-04-04 12:54 PDT, Saam Barati
no flags
patch for landing (2.23 KB, patch)
2018-04-05 17:00 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2018-04-04 12:42:50 PDT
Saam Barati
Comment 2 2018-04-04 12:54:17 PDT
Created attachment 337210 [details] patch for landing
EWS Watchlist
Comment 3 2018-04-04 12:56:37 PDT
Attachment 337210 [details] did not pass style-queue: ERROR: Source/bmalloc/ChangeLog:7: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 4 2018-04-05 17:00:03 PDT
Created attachment 337313 [details] patch for landing
WebKit Commit Bot
Comment 5 2018-04-05 18:29:30 PDT
Comment on attachment 337313 [details] patch for landing Clearing flags on attachment: 337313 Committed r230317: <https://trac.webkit.org/changeset/230317>
WebKit Commit Bot
Comment 6 2018-04-05 18:29:32 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2018-04-05 18:30:26 PDT
Note You need to log in before you can comment on or make changes to this bug.