IsoHeapImpl not IsoHeapImplBase should add itself to AllIsoHeaps https://bugs.webkit.org/show_bug.cgi?id=184174

Reviewed by Filip Pizlo.

Otherwise, another thread may see a non-fully formed IsoHeapImpl.

* bmalloc/IsoHeapImpl.cpp:
(bmalloc::IsoHeapImplBase::IsoHeapImplBase):
(bmalloc::IsoHeapImplBase::addToAllIsoHeaps):
* bmalloc/IsoHeapImpl.h:
* bmalloc/IsoHeapImplInlines.h:
(bmalloc::IsoHeapImpl<Config>::IsoHeapImpl):


Canonical link: https://commits.webkit.org/199899@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230317 268f45cc-cd09-0410-ab3c-d52691b4dbfc