Source/bmalloc/bmalloc/IsoHeapImpl.cpp
@@ -33,11 +33,15 @@ namespace bmalloc {
 
 IsoHeapImplBase::IsoHeapImplBase()
 {
-    PerProcess<AllIsoHeaps>::get()->add(this);
 }
 
 IsoHeapImplBase::~IsoHeapImplBase()
 {
+}
+
+void IsoHeapImplBase::addToAllIsoHeaps()
+{
+    PerProcess<AllIsoHeaps>::get()->add(this);
 }
 
 void IsoHeapImplBase::scavengeNow()
